# causal-llm-world-models

./: .gitignore  DATA_AND_CODE_AVAILABILITY.md  GITHUB_PACKAGE_QA.md  Makefile  PUBLICATION_PACKAGE_MANIFEST.md  README.md  pyproject.toml  requirements.txt
configs/: .env.example
docs/: PUBLISH_TO_GITHUB.md  RELEASE_CHECKLIST.md  REPO_CLEANUP_NOTES.md
examples/: quickstart.sh
manuscript/: behavioural_causal_discovery_world_model_LLM_NEJM_AI.backup_before_direction_revision.docx  behavioural_causal_discovery_world_model_LLM_NEJM_AI.backup_before_figure_split.docx  behavioural_causal_discovery_world_model_LLM_NEJM_AI.backup_before_wmi_removal.docx  behavioural_causal_discovery_world_model_LLM_NEJM_AI.docx  behavioural_causal_discovery_world_model_LLM_NEJM_AI.txt  behavioural_causal_discovery_world_model_LLM_NEJM_AI_pre_final_lock_backup.docx  world_model_teaser_onepager.docx  world_model_teaser_onepager.html  world_model_teaser_onepager.md
notebooks/: colab_kimi_k25.ipynb  colab_kimi_k25_thinking.ipynb  colab_qwq32b.ipynb  colab_single_model.ipynb
publication/: README.md
review_app/: app.js  index.html  styles.css
scripts/: build_domain_evaluation_summary.py  build_manuscript_docx.py  build_manuscript_figures.py  build_ontology_validation_sheet.py  build_publication_figures_6models.py  build_query_settings_and_run_sensitivity.py  build_rerun_manifest.py  build_study_manifest.py  build_supplementary_evaluation.py  colab_kimi_k25.py  colab_kimi_k25_thinking.py  colab_qwq32b.py  colab_runner.py  colab_single_model.py  combine_raw_results.py  review_app.py  (+7 more)
(+282 files in other folders)
